# Actul

./: CMakeLists.txt  LICENSE  README.md
additional/: TODO.txt  copyright_file_header.txt  createEclipseProject.sh  google_cpp_style_eclipse.xml  setActulEnv.sh
cmake/modules/: FindClang.cmake  FindLLVM.cmake
include/ExternalInterface/: CommonDefs.h  MemoryFunctions.h  PthreadLib.h  SchedulerFunctions.h  UtilFunctions.h
include/Implementation/: FunctionStackImpl.h  MemoryAllocator.h  PthreadImpl.h
include/Logger/: ActulLogger.h  Clock.h  ConstrainLogger.h  DataRace.h  DataRaceLogger.h  EpochLogger.h  Event.h  EventLogger.h  HbLogger.h  LockSet.h  LockSetLogger.h  YieldEvent.h  YieldLogger.h
include/Scheduler/: DataRaceAttribute.h  DataraceScheduler.h  InterdependencyTests.h  PermutationTests.h  ProcessInfo.h  ReportPrinter.h  ScheduleCreator.h  TestDatabase.h  TestInfo.h  TestReport.h  TestScheduler.h  TestSettings.h  ThreadInfo.h  ThreadScheduler.h
include/Util/: CycleFinder.h  DebugRoutines.h  Defines.h  EnvironmentDependencies.h  Invalid.h  LibcAllocator.h  Semaphore.h  SingletonClass.h  String.h  SymbolDb.h  ThreadLockGate.h  TypeDefs.h  Utility.h  VectorHelper.h
include/Util/Container/: AddressMap.h  Array.h  Vector.h
include/Util/Container/PBase/: PArray.h
include/Util/Container/SHM/: SHMArray.h  SHMManager.h  SHMObject.h  SHMWrapper.h  SHMemory.h
llvm_function_pass/: ActulInstrumentation.cpp
src/ExternalInterface/: MemoryFunctions.cc  PthreadLib.cc  SchedulerFunctions.cc  UtilFunctions.cc
src/Implementation/: FunctionStackImpl.cpp  MemoryAllocator.cpp  PthreadImpl.cpp
src/Logger/: ActulLogger.cpp  Clock.cpp  ConstrainLogger.cpp  DataRace.cpp  DataRaceLogger.cpp  EpochLogger.cpp  Event.cpp  EventLogger.cpp  HbLogger.cpp  LockSet.cpp  LockSetLogger.cpp  YieldLogger.cpp
src/Scheduler/: DataRaceAttribute.cpp  DataRaceScheduler.cpp  InterdependencyTests.cpp  PermutationTests.cpp  ProcessInfo.cpp  ReportPrinter.cpp  ScheduleCreator.cpp  TestDatabase.cpp  TestInfo.cpp  TestReport.cpp  TestScheduler.cpp  TestSettings.cpp  ThreadInfo.cpp  ThreadScheduler.cpp
src/Util/: CycleFinder.cpp  DebugRoutines.cpp  Defines.cpp  EnvironmentDependencies.cpp  Semaphore.cpp  String.cpp  SymbolDb.cpp  ThreadLockGate.cpp  Utility.cpp
src/Util/Container/: AddressMap.cpp
src/Util/SHM/: SHMManager.cpp  SHMMemory.cpp  SHMObject.cpp
test/: barrier_excluded_no_dr.cpp  conditional_excluded_no_dr.cpp  inc_2.cpp  min_worst_case.cpp  mutex_excluded_heap_no_dr.cpp  mutex_excluded_no_dr.cpp  new_delete.cpp  paper_1.cpp  paper_2a.cpp  paper_2b.cpp  paper_2c.cpp  paper_2d.cpp  pthread_heap_locks.cpp  pthread_heap_race.cpp  pthread_simple_wr_dr.cpp  pthread_simple_ww_dr.cpp  two_harm_dependent.cpp  two_harm_independent.cpp  two_harm_overlap_dependent.cpp  two_harm_overlap_independent.cpp
wrapper/: bash_c_wrapper.in  bash_cxx_wrapper.in  bash_linker_wrapper.in
